# zen_irc

./: example_config.toml  pyproject.toml  readme.md
src/zen_irc/: __init__.py  baseirchandlers.py  client.py  commands.py  extendedirchandlers.py  handlers.py  ircclient.py  irccommands.py  main.py  zenirc.py  zenircclient.py  zenircgui.py
src/zenbot/: __init__.py  commands.py  handlers.py  main.py  zenbot.py
