[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zen_irc"
version = "0.1.0"
authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "A simple IRC client library."
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

dependencies = ["zenlib >= 1.4.0",
"irctokens >= 2.0.2"
]


[project.urls]
Homepage = "https://github.com/desultory/zen_irc"
Issues = "https://github.com/desultory/zen_irc/issues"
